# OperateGeom

./: CMakeLists.txt  README.md  main.cpp
OffsetStruct/: CMakeLists.txt  CalculateValidity.cpp  CalculateValidity.h  ExicuteProgram.cpp  ExicuteProgram.h  ProIOInterface.cpp  ProIOInterface.h  RootNodeSolve.cpp  RootNodeSolve.h
OffsetStruct/CommonFile/: DataStructure.h  EnumType.h  NumPreErr.h  NumStruct.h
OffsetStruct/DynamicProgram/: CreateTrajectory.cpp  CreateTrajectory.h  TrajectorySolve.cpp  TrajectorySolve.h
OffsetStruct/DynamicProgram/EquBndIslLoop/: BndIslMatch.cpp  BndIslMatch.h  EquBndLoop.cpp  EquBndLoop.h  EquIslLoop.cpp  EquIslLoop.h  EquIslLoopSolve.cpp  EquIslLoopSolve.h
OffsetStruct/DynamicProgram/EquedRegion/: EquidBoundary.cpp  EquidBoundary.h  EquidIsland.cpp  EquidIsland.h  EquidIslandAux.cpp  EquidIslandAux.h
OffsetStruct/DynamicProgram/GeneratePath/: EquidBoundary.h  EquidIsland.cpp  EquidIsland.h  EquidIslandAux.cpp  EquidIslandAux.h  MergeRegAux.cpp  MergeRegAux.h  MergeRegLogic.cpp  MergeRegLogic.h  MergeRegion.cpp  MergeRegion.h
OffsetStruct/DynamicProgram/GenerateTrajectory/: MergeLoopLogSolve.cpp  MergeLoopLogSolve.h  MergeLoopLogic.cpp  MergeLoopLogic.h  MergeLoopSolve.cpp  MergeLoopSolve.h  ToolTrajectory.cpp  ToolTrajectory.h  ToolTrajectorySolve.cpp  ToolTrajectorySolve.h
OffsetStruct/EquidisCurve/ElementPresion/: ElementPreSolve.cpp  ElementPreSolve.h  ElementPrecision.cpp  ElementPrecision.h  LoopEndToEnd.cpp  LoopEndToEnd.h
OffsetStruct/EquidisCurve/EquidisCurve/: ElementEquEnve.cpp  ElementEquEnve.h  EquidistantCurve.cpp  EquidistantCurve.h
OffsetStruct/EquidisCurve/EquidisCurve/EquidCurve/: CreateCurveLogic.cpp  CreateCurveLogic.h  CreateCurveSolve.cpp  CreateCurveSolve.h  CreateEqudCurve.cpp  CreateEqudCurve.h  EquCurveSolve.cpp  EquCurveSolve.h
OffsetStruct/EquidisCurve/GeometryFitting/: CreateFitting.h
OffsetStruct/EquidisCurve/GeometryFitting/FittingSegment/: FittingArcLogic.h  FittingArcSolve.h  FittingSegToArc.h
OffsetStruct/EquidisCurve/GeometryFitting/GeomFitting/: FittingArcCase.h  GeomFittingSolve.h  GeometryFitting.h
OffsetStruct/EquidisCurve/RegulateOftVal/: CalculateOftVal.cpp  CalculateOftVal.h
OffsetStruct/EquidisCurve/RegulateOftVal/BaseElemCorner/: CornerMachAux.cpp  CornerMachAux.h  CornerMachine.cpp  CornerMachine.h
OffsetStruct/EquidisCurve/RegulateOftVal/BaseEquidInt/: SelIntMachAux.cpp  SelIntMachAux.h  (+2 more)
OffsetStruct/GeometryCalculate/GeomCalculate/: CalculateAngle.cpp  CalculateAngle.h  ClosestPoint.cpp  ClosestPoint.h  GeomCalculate.cpp  GeomCalculate.h  GeomDistance.cpp  GeomDistance.h  GeometryLogic.cpp  GeometryLogic.h  LoopDirection.cpp  LoopDirection.h  PointOnElement.cpp  PointOnElement.h
OffsetStruct/GeometryCalculate/GeomIntersect/: CheckGeomInt.cpp  CheckGeomInt.h  ElemBoxIntersect.cpp  ElemBoxIntersect.h  ElementIntersect.cpp  ElementIntersect.h  GeomIntSolve.cpp  GeomIntSolve.h  GeomIntersect.cpp  GeomIntersect.h  HandExtreInt.cpp  HandExtreInt.h
OffsetStruct/GeometryCalculate/GeomQuality/: GeomTangency.cpp  GeomTangency.h  TupleQuality.cpp  TupleQuality.h
OffsetStruct/GeometryCalculate/OperateCurve/: CreateCaseArc.cpp  CreateCaseArc.h  CreateCurveCase.cpp  CreateCurveCase.h
OffsetStruct/GeometryCalculate/RelativeContain/: GeoContainSolve.cpp  GeoContainSolve.h  GeomContain.cpp  GeomContain.h  LimitCoordinate.cpp  LimitCoordinate.h  PntInPolySolve.cpp  PntInPolySolve.h  PointInPolygon.cpp  PointInPolygon.h
OffsetStruct/GeometryClip/: GeomClipSolve.cpp  GeomClipSolve.h
OffsetStruct/GeometryClip/ClipIntersect/: IntClipCurve.cpp  IntClipCurve.h  IntClipLoop.cpp  IntClipLoop.h
OffsetStruct/GeometryClip/GeomBoolInt/: LoopBoolInt.cpp  LoopBoolInt.h
OffsetStruct/GeometryClip/GeomBoolSubtract/: LoopBoolSubtract.cpp  LoopBoolSubtract.h  LoopSubtractSolve.cpp  LoopSubtractSolve.h  OrganSubtrLoop.cpp  OrganSubtrLoop.h
OffsetStruct/GeometryClip/GeomBoolUnion/: LoopBoolUnion.cpp  LoopBoolUnion.h  LoopUnionSolve.cpp  LoopUnionSolve.h  OrganClipLoop.cpp  OrganClipLoop.h
OffsetStruct/OperateElem/LoopEleHandle/: HandleLoop.cpp  HandleLoop.h  MultipleInclude.cpp  MultipleInclude.h  OperateElem.cpp  OperateElem.h  OperateLoop.cpp  OperateLoop.h  ReconstructLoop.cpp  ReconstructLoop.h
OffsetStruct/OperateElem/NumeCalculate/: ElemCalculate.cpp  ElemCalculate.h  MathCalculate.cpp  MathCalculate.h
OffsetStruct/OperateElem/OperateOftString/: OperateOftString.cpp  OperateOftString.h
OffsetStruct/ParallelPath/: CMakeLists.cpp  CntLinePath.cpp  CntLinePath.h  CntLinePathAux.cpp  CntLinePathAux.h  ParallelFinishing.cpp  ParallelFinishing.cpp.autosave  ParallelFinishing.h  ParallelLogic.cpp  ParallelLogic.h
OffsetStruct/ParallelPath/LinePath/: CreateLineCut.cpp  GeomUnitStruct.h  LineCutLogic.cpp  LineCutSolve.cpp  LineCutSolve.h  OrgLineLogic.cpp  OrgLineLogic.h  OrgLineSolve.cpp  OrgLineSolve.h
OffsetStruct/ResultTreatment/AlongPathEntry/: AlongPathEntry.cpp  AlongPathEntry.h  CreateHelix.cpp  CreateHelix.h  HelixCurveSolve.cpp  HelixCurveSolve.h  HorArcSteer.cpp  HorArcSteer.h
OffsetStruct/ResultTreatment/AppendExtend/: AppExtraPathSolve.cpp  AppExtraPathSolve.h  AppendExtraPath.h  AppendExtraPath_.h
OffsetStruct/ResultTreatment/ConnectAreaLoop/: ConnectAreaLoop.cpp  ConnectAreaLoop.h  ConnectAreaSolve.cpp  ConnectAreaSolve.h
OffsetStruct/ResultTreatment/CreateHelix/: CreateHelix.cpp  CreateHelix_.h  HelixCurveSolve.cpp  HelixCurveSolve_.h
OffsetStruct/ResultTreatment/MachineDirection/: LoopDirSymbol.cpp  LoopDirSymbol_.h  PathDirection.h  PathDirection_.h
OffsetStruct/ResultTreatment/OffsetPrecision/: LoopOftPrecision.h  LoopOftPrecision_.h
OffsetStruct/ResultTreatment/SmoothStrategy/: ConnectArcRotDir.cpp  ConnectArcRotDir_.h  CreateSmoothArc.cpp  CreateSmoothArc_.h  SmoothArcCenter.h  SmoothArcCenter_.h  SmoothLogic.cpp  SmoothLogic.h  SmoothProCal.cpp  SmoothProCal.h  SmoothRadius.cpp  SmoothRadius_.h  SmoothStrategy.cpp  SmoothStrategy.h
OffsetStruct/ResultTreatment/SpecifyCutEntry/: CutEntrySolve.cpp  CutEntrySolve.h  SpecifyCutEntry.cpp  SpecifyCutEntry.h
(+140 files in other folders)
