cmake_minimum_required(VERSION 3.12)
PROJECT(OffsetStruct)

set(CMAKE_PREFIX_PATH ./ThirdPart/TBB/TBB_2021_11)
find_package(TBB REQUIRED VERSION 2021.11.0)

AUX_SOURCE_DIRECTORY(./ SRC_DIR)
AUX_SOURCE_DIRECTORY(./DynamicProgram/EquBndIslLoop SRC_DIR)
AUX_SOURCE_DIRECTORY(./DynamicProgram/GenerateTrajectory SRC_DIR)
AUX_SOURCE_DIRECTORY(./EquidisCurve/ElementPrecision SRC_DIR)
AUX_SOURCE_DIRECTORY(./EquidisCurve/GeometryFitting SRC_DIR)
AUX_SOURCE_DIRECTORY(./EquidisCurve/GeometryFitting/FittingSegment SRC_DIR)
AUX_SOURCE_DIRECTORY(./EquidisCurve/GeometryFitting/GeomFitting SRC_DIR)
AUX_SOURCE_DIRECTORY(./EquidisCurve/EquidisCurve SRC_DIR)
AUX_SOURCE_DIRECTORY(./EquidisCurve/EquidisCurve/EquidCurve SRC_DIR)
AUX_SOURCE_DIRECTORY(./EquidisCurve/RegulateOftVal SRC_DIR)
AUX_SOURCE_DIRECTORY(./EquidisCurve/RegulateOftVal/BaseElemCorner SRC_DIR)
AUX_SOURCE_DIRECTORY(./EquidisCurve/RegulateOftVal/BaseEquidInt SRC_DIR)
AUX_SOURCE_DIRECTORY(./EquidisCurve/RegulateOftVal/BasePassage SRC_DIR)
AUX_SOURCE_DIRECTORY(./EquidisCurve/RegulateOftVal/GeomAreaCase SRC_DIR)
AUX_SOURCE_DIRECTORY(./EquidisCurve/SelIntCalculate/OpenLoopSelInt SRC_DIR)
AUX_SOURCE_DIRECTORY(./EquidisCurve/SelIntCalculate/LoopSelIntersect SRC_DIR)
AUX_SOURCE_DIRECTORY(./GeometryCalculate/GeomCalculate SRC_DIR)
AUX_SOURCE_DIRECTORY(./GeometryCalculate/GeomIntersect SRC_DIR)
AUX_SOURCE_DIRECTORY(./GeometryCalculate/GeomQuality SRC_DIR)
AUX_SOURCE_DIRECTORY(./GeometryCalculate/RelativeContain SRC_DIR)
AUX_SOURCE_DIRECTORY(./OperateElem/LoopEleHandle SRC_DIR)
AUX_SOURCE_DIRECTORY(./OperateElem/NumeCalculate SRC_DIR)
AUX_SOURCE_DIRECTORY(./OperateElem/OperateOftString SRC_DIR)
AUX_SOURCE_DIRECTORY(./PlaneStyleMilling SRC_DIR)
AUX_SOURCE_DIRECTORY(./ResultTreatment/CreateHelix SRC_DIR)
AUX_SOURCE_DIRECTORY(./ResultTreatment/MachineDirection SRC_DIR)
AUX_SOURCE_DIRECTORY(./ResultTreatment/SmoothStrategy SRC_DIR)
AUX_SOURCE_DIRECTORY(./ResultTreatment/SmoothStrategy/SmoothStrategy SRC_DIR)
AUX_SOURCE_DIRECTORY(./ResultTreatment/AlongPathEntry SRC_DIR)
AUX_SOURCE_DIRECTORY(./ResultTreatment/SpecifyCutEntry SRC_DIR)
AUX_SOURCE_DIRECTORY(./ResultTreatment/ConnectAreaLoop SRC_DIR)
AUX_SOURCE_DIRECTORY(./ResultTreatment/OffsetPrecision SRC_DIR)
AUX_SOURCE_DIRECTORY(./ResultTreatment/AppendExtend SRC_DIR)
AUX_SOURCE_DIRECTORY(./GeometryClip/GeomBoolUnion SRC_DIR)
AUX_SOURCE_DIRECTORY(./GeometryClip/GeomBoolSubtract SRC_DIR)
AUX_SOURCE_DIRECTORY(./GeometryClip/ClipIntersect SRC_DIR)
AUX_SOURCE_DIRECTORY(./GeometryClip/GeomBoolInt SRC_DIR)
AUX_SOURCE_DIRECTORY(./GeometryClip SRC_DIR)

add_library(OffsetStruct ${SRC_DIR})
target_include_directories(OffsetStruct PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>)
target_include_directories(OffsetStruct PUBLIC $<INSTALL_INTERFACE:include>)
target_link_libraries(OffsetStruct PRIVATE TBB::tbb)
install(DIRECTORY . DESTINATION include/OffsetStruct FILES_MATCHING PATTERN "*.h" PATTERN "*.hpp" PATTERN "*.hxx" PATTERN "build" EXCLUDE)
install(TARGETS OffsetStruct EXPORT ${PROJECT_NAME}Targets RUNTIME DESTINATION lib LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
install(EXPORT OffsetStructTargets FILE ${PROJECT_NAME}Targets.cmake DESTINATION lib/cmake/OffsetStruct)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/OffsetStructConfig.cmake DESTINATION lib/cmake/OffsetStruct)

if (MSVC)
    add_compile_options(/MP)
    add_compile_options(/wd4267)
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4267")
    target_compile_options(OffsetStruct PUBLIC /utf-8)
else (UNIX)
    target_compile_options(OffsetStruct PUBLIC -fPIC)
endif()
